fix(dropdown): remove overflow-x from dropdown items

--- a/packages/themes/bootstrap/artbasel/scss/_dropdown.scss
+++ b/packages/themes/bootstrap/artbasel/scss/_dropdown.scss
@@ -17,6 +17,7 @@
 
     .dropdown-items {
       overflow-y: auto;
+      overflow-x: hidden;
       scrollbar-width: thin;
       scrollbar-color: $color-mch-gray-400 $color-mch-gray-200;
       * {
